# atlas

./: .gitignore  .mcp.json  README.md  openclaw.plugin.json  package.json
.beads/: metadata.json
.beads/hooks/hooks.d/pre-commit/: 50-agent-mail.py
.claude/: atlas.yaml  relay.yaml
.claude-plugin/: plugin.json
.serena/: project.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
hooks/: hooks.json
hooks/scripts/: session-start.py
knowledge/: schema.md
mcp-server/: pyproject.toml
mcp-server/src/atlas_mcp/: __init__.py  providers.py  registry.py  server.py
mcp-server/tests/: test_file_access.py  test_intelligent_selection.py  test_registry_queries.py  test_semantic_navigation.py
openclaw-skills/projects/: SKILL.md
skills/context/: SKILL.md
skills/init/: SKILL.md
skills/projects/: SKILL.md
spec/: ARCHITECTURE.md  DATA_MODEL.md  INTEGRATION.md  SKILLS.md
